--- a/src/app/app-nav/app-nav.component.html
+++ b/src/app/app-nav/app-nav.component.html
@@ -27,7 +27,8 @@
       </button>
       <span>Philpost Neda</span>
     </mat-toolbar>
-    <router-outlet></router-outlet>
-    
+    <ng-content></ng-content>
+     
   </mat-sidenav-content>
-</mat-sidenav-container>
+</mat-sidenav-container> 
+
