--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 
-/* body { margin: 0; } */
+body { margin: 0; }
+
+ input.ng-invalid.ng-dirty{
+    border: 1px solid red;
+} 
+
+
+button:hover,a.btn:hover{
+    cursor: pointer;
+}
